# MSc-Machine-Learning-and-Data-Science

./: .gitattributes  README.md
Deep Learning/: Summative assessment 3.ipynb  Summative_assessment_2.ipynb  assessment1_01252821.ipynb
Ethics in Data Science and Artificial Intelligence/Part 1/: ethics_cw_01252821.ipynb
Exploratory Data Analytics and Visualisation/Assessment 1/: assessment-1.Rmd
Exploratory Data Analytics and Visualisation/Assessment 2/: assessment-2.Rmd
Exploratory Data Analytics and Visualisation/Assessment 3/: assessment-3-group-project.Rmd
Exploratory Data Analytics and Visualisation/Assessment 4/: assessment-4.Rmd
Exploratory Data Analytics and Visualisation/Final Project/: final.Rmd
Learning Agents/: 01252821_LA_project.ipynb  Coursework 1, CID 01252821.ipynb  Coursework 2, CID 01252821.ipynb  Coursework 3, CID 01252821.ipynb  GP_Setup.ipynb  RL_Setup.ipynb  assessment-1-01252821.ipynb
Programming for Data Science/Assessment 1/: Q1.html  Q1.ipynb  Q2.R
Programming for Data Science/Assessment 2/: Q1.ipynb  Q2.R
Programming for Data Science/Final Project/Q2/wilcoxon/: LICENSE  README.md  pyproject.toml
Programming for Data Science/Final Project/Q2/wilcoxon/src/wilcoxon/: __init__.py  wmw.py
Programming for Data Science/Final Project/Q2/wilcoxon/tests/: test_wmwfuncs.py
Supervised Learning/Assessment 1/: 01252821_sl_assessment_1_code.R
Supervised Learning/Assessment 2/: 01252821_sl_assessment_2.Rmd
Supervised Learning/Assessment 3/: 01252821_sl_assessment_3_code.R
Unstructured Data Analysis/final-project/: README.md
(+34 files in other folders)
