[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wilcoxon"
version = "0.0.1"
authors = [
  { name="Joana Levtcheva", email="jtl22@ic.ac.uk" },
]
description = "A Collection of Functions about the Wilcoxon-Mann-Whitney test"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy>=1.19.2",
  "pandas>=1.1.4",
  "scipy>=1.5.2"
]

license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
addopts = [
    "--import-mode=importlib",
]
